--- a/package.json
+++ b/package.json
@@ -25,5 +25,24 @@
   "bugs": {
     "url": "https://github.com/plotx/token-Polygon/issues"
   },
-  "homepage": "https://github.com/plotx/token-Polygon#readme"
+  "homepage": "https://github.com/plotx/token-Polygon#readme",
+  "dependencies": {
+    "@openzeppelin/contracts": "^2.5.0",
+    "@openzeppelin/test-helpers": "^0.5.6",
+    "bignumber.js": "^9.0.0",
+    "coveralls": "^3.0.2",
+    "eip-712": "^0.4.2",
+    "ethereumjs-abi": "^0.6.8",
+    "ethereumjs-util": "^7.0.7",
+    "ganache-cli": "^6.9.0",
+    "pify": "^5.0.0",
+    "solhint": "^3.2.0",
+    "solidity-coverage": "^0.7.1",
+    "truffle": "^5.1.18",
+    "web3": "^0.20.4",
+    "web3-utils": "^1.3.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0"
+  }
 }
